fix sidecar handling and cell handling

--- a/js/style/index.css
+++ b/js/style/index.css
@@ -13,3 +13,21 @@
 .cvw-sidecar > .p-Widget {
     top: 0px !important;
 }
+
+.jp-SideBar.jp-mod-right .p-TabBar-tabCloseIcon {
+    padding: 4px 0px 4px 4px;
+    background-size: 16px;
+    height: 16px;
+    width: 16px;
+    background-image: var(--jp-icon-close);
+    background-position: center;
+    background-repeat: no-repeat;
+    align-self: center;
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.5);
+}
+
+.jp-SideBar.jp-mod-right .p-TabBar-tabCloseIcon:hover {
+    background-size: 16px;
+    background-image: var(--jp-icon-close);
+    box-shadow: none;
+}
