--- a/js/style/index.css
+++ b/js/style/index.css
@@ -1,44 +1,44 @@
 @import "~three-cad-viewer/dist/three-cad-viewer.css";
 
-/* .cvw-sidecar {
-    background: var(--jp-layout-color0);
-    display: flex;
-    flex-direction: row;
-}
-
-.cvw-sidecar > .jp-Toolbar {
-    display: none;
-}
-
-.cvw-sidecar > .p-Widget {
-    top: 0px !important;
-} */
-
-.jupyterlab-sidecar {
+.cvw-sidecar {
   background: var(--jp-layout-color0);
   display: flex;
+  flex-direction: row;
+}
+
+.cvw-sidecar>.jp-Toolbar {
+  display: none;
+}
+
+.cvw-sidecar>.lm-Widget {
+  top: 0px !important;
+}
+
+.cvw-sidecar>.lm-Widget>.jp-OutputPrompt {
+  width: 0px !important;
 }
 
 .jupyterlab-sidecar .jp-OutputPrompt.jp-OutputArea-prompt {
   display: none;
 }
 
-.jupyterlab-sidecar > .jp-OutputArea-child {
+.jupyterlab-sidecar>.jp-OutputArea-child {
   flex: 1;
 }
 
-.jp-SideBar.jp-mod-right .p-TabBar-tabCloseIcon {
+.jp-SideBar.jp-mod-right .p-TabBar-tabCloseIcon,
+.jp-SideBar.jp-mod-right .lm-TabBar-tabCloseIcon {
   padding: 4px 0px 4px 4px;
   background-size: 16px;
   height: 16px;
   width: 16px;
-  background-image: var(--jp-icon-close);
+  /* background-image: var(--jp-icon-close); */
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' width='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg class='jp-icon3 jp-icon-selectable jp-icon-accent2-hover' fill='%23616161'%3E%3Cpath d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/%3E%3C/g%3E%3C/svg%3E");
   background-position: center;
   background-repeat: no-repeat;
   align-self: center;
 }
 
-.jp-SideBar.jp-mod-right .p-TabBar-tabCloseIcon:hover {
-  background-size: 16px;
-  background-image: var(--jp-icon-inverse-close-circle);
+.jp-SideBar .lm-TabBar-tab {
+  padding: 16px 0px 0px 0px;
 }
